[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/profile_settings/ProfileSettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ProfileSettings/ProfileCreate.tscn" type="PackedScene" id=2]

[sub_resource type="Theme" id=1]

[node name="ProfileSettingsMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_top = 2.82837
margin_right = 1024.0
margin_bottom = 602.828
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel"]
margin_left = 459.0
margin_top = 70.0
margin_right = 512.0
margin_bottom = 84.0
rect_scale = Vector2( 2, 2 )
text = "PROFILE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Control/Panel"]
margin_left = 491.0
margin_top = 360.624
margin_right = 533.0
margin_bottom = 380.624
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileInfo" type="VBoxContainer" parent="Control/Panel"]
visible = false
margin_left = 345.068
margin_top = 114.551
margin_right = 675.068
margin_bottom = 331.551
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel/ProfileInfo"]
margin_right = 330.0
margin_bottom = 14.0
text = "Username: "

[node name="ChangeButton" type="Button" parent="Control/Panel/ProfileInfo"]
margin_top = 18.0
margin_right = 330.0
margin_bottom = 38.0
text = "Change Account Information"

[node name="SignOutButton" type="Button" parent="Control/Panel/ProfileInfo"]
margin_top = 42.0
margin_right = 330.0
margin_bottom = 62.0
text = "Sign Out"

[node name="SignIn" type="VBoxContainer" parent="Control/Panel"]
margin_left = 343.654
margin_top = 110.309
margin_right = 673.654
margin_bottom = 327.309
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserLabel" type="Label" parent="Control/Panel/SignIn"]
margin_right = 330.0
margin_bottom = 14.0
text = "Username"

[node name="UserLineEdit" type="LineEdit" parent="Control/Panel/SignIn"]
margin_top = 18.0
margin_right = 330.0
margin_bottom = 42.0

[node name="PasswordLabel" type="Label" parent="Control/Panel/SignIn"]
margin_top = 46.0
margin_right = 330.0
margin_bottom = 60.0
text = "Password"

[node name="PasswordLineEdit" type="LineEdit" parent="Control/Panel/SignIn"]
margin_top = 64.0
margin_right = 330.0
margin_bottom = 88.0
secret = true

[node name="SignInButton" type="Button" parent="Control/Panel/SignIn"]
margin_top = 92.0
margin_right = 330.0
margin_bottom = 112.0
text = "Signin"

[node name="AccountButton" type="Button" parent="Control/Panel/SignIn"]
margin_top = 116.0
margin_right = 330.0
margin_bottom = 136.0
text = "Create Account"

[node name="ErrorLabel" type="Label" parent="Control/Panel/SignIn"]
visible = false
margin_top = 140.0
margin_right = 330.0
margin_bottom = 154.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Incorrect username or password"
align = 1

[node name="ProfileCreate" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="pressed" from="Control/Panel/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Control/Panel/SignIn/SignInButton" to="." method="_on_SignInButton_pressed"]
[connection signal="pressed" from="Control/Panel/SignIn/AccountButton" to="." method="_on_AccountButton_pressed"]
